; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_aemphasis.c_freq_gain.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_aemphasis.c_freq_gain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, double, double, double, double }

@M_PI = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (%struct.TYPE_3__*, double, double)* @freq_gain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @freq_gain(%struct.TYPE_3__* %0, double %1, double %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store double %1, double* %5, align 8
  store double %2, double* %6, align 8
  %9 = load double, double* @M_PI, align 8
  %10 = fmul double 2.000000e+00, %9
  %11 = load double, double* %6, align 8
  %12 = fdiv double %10, %11
  %13 = load double, double* %5, align 8
  %14 = fmul double %13, %12
  store double %14, double* %5, align 8
  %15 = load double, double* %5, align 8
  %16 = call double @cos(double %15) #3
  store double %16, double* %7, align 8
  %17 = load double, double* %5, align 8
  %18 = call double @sin(double %17) #3
  %19 = fneg double %18
  store double %19, double* %8, align 8
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = sitofp i32 %22 to double
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 1
  %26 = load double, double* %25, align 8
  %27 = load double, double* %7, align 8
  %28 = fmul double %26, %27
  %29 = fadd double %23, %28
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 2
  %32 = load double, double* %31, align 8
  %33 = load double, double* %7, align 8
  %34 = load double, double* %7, align 8
  %35 = fmul double %33, %34
  %36 = load double, double* %8, align 8
  %37 = load double, double* %8, align 8
  %38 = fmul double %36, %37
  %39 = fsub double %35, %38
  %40 = fmul double %32, %39
  %41 = fadd double %29, %40
  %42 = fptosi double %41 to i32
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 1
  %45 = load double, double* %44, align 8
  %46 = load double, double* %8, align 8
  %47 = fmul double %45, %46
  %48 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %49 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %48, i32 0, i32 2
  %50 = load double, double* %49, align 8
  %51 = fmul double 2.000000e+00, %50
  %52 = load double, double* %7, align 8
  %53 = fmul double %51, %52
  %54 = load double, double* %8, align 8
  %55 = fmul double %53, %54
  %56 = fadd double %47, %55
  %57 = call double @hypot(i32 %42, double %56)
  %58 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %59 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %58, i32 0, i32 3
  %60 = load double, double* %59, align 8
  %61 = load double, double* %7, align 8
  %62 = fmul double %60, %61
  %63 = fadd double 1.000000e+00, %62
  %64 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %65 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %64, i32 0, i32 4
  %66 = load double, double* %65, align 8
  %67 = load double, double* %7, align 8
  %68 = load double, double* %7, align 8
  %69 = fmul double %67, %68
  %70 = load double, double* %8, align 8
  %71 = load double, double* %8, align 8
  %72 = fmul double %70, %71
  %73 = fsub double %69, %72
  %74 = fmul double %66, %73
  %75 = fadd double %63, %74
  %76 = fptosi double %75 to i32
  %77 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %78 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %77, i32 0, i32 3
  %79 = load double, double* %78, align 8
  %80 = load double, double* %8, align 8
  %81 = fmul double %79, %80
  %82 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %83 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %82, i32 0, i32 4
  %84 = load double, double* %83, align 8
  %85 = fmul double 2.000000e+00, %84
  %86 = load double, double* %7, align 8
  %87 = fmul double %85, %86
  %88 = load double, double* %8, align 8
  %89 = fmul double %87, %88
  %90 = fadd double %81, %89
  %91 = call double @hypot(i32 %76, double %90)
  %92 = fdiv double %57, %91
  ret double %92
}

; Function Attrs: nounwind
declare dso_local double @cos(double) #1

; Function Attrs: nounwind
declare dso_local double @sin(double) #1

declare dso_local double @hypot(i32, double) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
